tests/type_errors/list_sort_field_access.nos
# expect_error: no field
# Field access on list method result should be caught at compile time
main() = [1, 2, 3].sort().name
